cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:

author:             Enrico Bandiera
maintainer:         e.bandiera@gmail.com

library
    exposed-modules:  Util.File

    build-depends:    base
                    , text
    hs-source-dirs:   lib
    default-language: Haskell2010


executable Day1
    main-is:          Day1.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day2
    main-is:          Day2.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day3
    main-is:          Day3.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day4
    main-is:          Day4.hs
    build-depends:    base, aoc2022, parsec, text
    hs-source-dirs:   src
    default-language: Haskell2010
