cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:

author:             Enrico Bandiera
maintainer:         e.bandiera@gmail.com

library
    exposed-modules:  Util.File

    build-depends:    base
                    , text
    hs-source-dirs:   lib
    default-language: Haskell2010


executable Day1
    main-is:          Day1.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day2
    main-is:          Day2.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day3
    main-is:          Day3.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day4
    main-is:          Day4.hs
    build-depends:    base, aoc2022, parsec, text
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day5
    main-is:          Day5.hs
    build-depends:    base, aoc2022, parsec, text, containers, deque, qm-interpolated-string, transformers
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day6
    main-is:          Day6.hs
    build-depends:    base, aoc2022
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day7
    main-is:          Day7.hs
    build-depends:    base, aoc2022, parsec, text, transformers
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day8
    main-is:          Day8.hs
    build-depends:    base, aoc2022, array
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day9
    main-is:          Day9.hs
    build-depends:    base, aoc2022, transformers, array, parsec, text
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day10
    main-is:          Day10.hs
    build-depends:    base, aoc2022, parsec, text
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day11
    main-is:          Day11.hs
    build-depends:    base, aoc2022, parsec, text, transformers, containers, qm-interpolated-string
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day12
    main-is:          Day12.hs
    build-depends:    base, aoc2022, array, containers, lens, list-t, transformers
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day13
    main-is:          Day13.hs
    build-depends:    base, aoc2022, parsec, text, split
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day14
    main-is:          Day14.hs
    build-depends:    base, aoc2022, parsec, text, split
    hs-source-dirs:   src
    default-language: Haskell2010

executable Day15
    main-is:          Day15.hs
    build-depends:    base, aoc2022, parsec, text
    hs-source-dirs:   src
    default-language: Haskell2010
